# qtrobot

./: .gitignore  README.md  README_QTROBOT.md
launch/: confusion_detection.launch
src/: CMakeLists.txt
src/qt_common/: CMakeLists.txt  package.xml
src/qt_confusion_detection/: CMakeLists.txt  package.xml
src/qt_confusion_detection/msg/: ConfusionState.msg  FaceFeatures.msg
src/qt_confusion_detection/src/: confusion_classifier_node.py  face_detector_node.py  face_detector_node_fixed.py  face_detector_node_no_simulation.py  face_detector_node_real.py  feature_extractor_node.py  feature_extractor_node_fixed.py
src/qt_repair_policy/: CMakeLists.txt  package.xml
src/qt_repair_policy/src/: policy_engine_node.py
src/qt_repair_policy/srv/: RepairStrategy.srv
