<?xml version="1.0"?>
<package format="2">
  <name>qt_repair_policy</name>
  <version>0.1.0</version>
  <description>
    A ROS package for conversational repair strategies in response to detected confusion for QTrobot
  </description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qt_confusion_detection</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>qt_confusion_detection</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <export>
  </export>
</package>
